# Getstock

./: .env.example  .gitignore  PRD.md  README.md  TRD.md  Tasks.md  config.yaml  pyproject.toml
getstock/: __init__.py  __main__.py  cli.py  config.py  logging_config.py  normalize.py  pipeline.py  quarantine.py  query.py  schema.py  storage.py  universe.py  validate.py
getstock/sources/: __init__.py  krx.py  tiingo.py
tests/: conftest.py  test_config.py  test_normalize.py  test_pipeline.py  test_quarantine.py  test_query.py  test_schema.py  test_storage.py  test_universe.py  test_validate.py
tests/test_sources/: test_krx.py  test_tiingo.py
